<resources>
    <string formatted = "false" name="app_name">MyMediaPlayerTest</string>
    <string formatted = "false" name="title_activity_main">MainActivity</string>
    <string formatted = "false" name="menu_view">View Mode</string>
    <string formatted = "false" name="menu_network_stream">Stream</string>
    <string formatted = "false" name="menu_select">Select</string>
    <string formatted = "false" name="menu_setting">Setting</string>
    <string formatted = "false" name="menu_help">Help</string>
    <string formatted = "false" name="action_refresh">Refresh</string>
    <string formatted = "false" name="action_search">Search</string>
    <string formatted = "false" name="pref_cat_hw_decoder">Hardware Decoder</string>
    <string formatted = "false" name="pref_cat_edit">Edit</string>
    <string formatted = "false" name="pref_cat_user_data">User Data</string>
    <string formatted = "false" name="pref_hw_decoder_use_hwplus">Use HW+ decoder</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_decoder_local">HW+ decoder (local)</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_decoder_local_summary">Set HW+ decoder as default for playing videos stored on local files.</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_decoder_network">HW+ decoder (network)</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_decoder_network_summary">Set HW+ decoder as default for network play.</string>
    <string formatted = "false" name="pref_hw_decoder_try_hw">Try HW decoder</string>
    <string formatted = "false" name="pref_hw_decoder_try_hw_summary">Try HW decoder if HW+ decoder fails</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_video">HW+ video codecs</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_video_summary">Select video codecs to be played with HW+ decoder.</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_audio">HW+ audio on SW video</string>
    <string formatted = "false" name="pref_hw_decoder_hwplus_audio_summary">Use HW+ audio decoder if SW audio decoder fails in SW decoding mode.</string>
    <string formatted = "false" name="pref_hw_decoder_try_hwplus">Try HW+ decoder</string>
    <string formatted = "false" name="pref_hw_decoder_try_hwplus_summary">Try HW+ decoder if HW decoder fails.</string>
    <string formatted = "false" name="pref_hw_decoder_correct_aspect">Correct aspect ratio</string>
    <string formatted = "false" name="pref_hw_decoder_correct_aspect_summary">Correct HW decoder aspect ratio. Use this option if HW decoder ignores aspect ratio.</string>
    <string formatted = "false" name="pref_hw_decoder_calibrate_playback">Calibrate playback position</string>
    <string formatted = "false" name="pref_hw_decoder_calibrate_playback_summary">Enter seconds to adjust playback position of HW decoder. This is useful when playback position is displayed incorrectly.</string>
    <string formatted = "false" name="pref_hw_decoder_hw_audio">HW audio track selectable</string>
    <string formatted = "false" name="pref_hw_decoder_hw_audio_summary">If HW decoder natively supports selecting audio track, playback of secondary audio tracks will become smoother.</string>
    <string formatted = "false" name="pref_sw_decoder_sw_decoder_local">SW decoder (local)</string>
    <string formatted = "false" name="pref_sw_decoder_sw_decoder_local_summary">Use SW decoder for local files stored on the device.</string>
    <string formatted = "false" name="pref_sw_decoder_sw_decoder_network">SW decoder (network)</string>
    <string formatted = "false" name="pref_sw_decoder_sw_decoder_network_summary">Use SW decoder for playing remote network sources via HTTP,FTP,RTSP,MMS and more.</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio">SW audio</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio_summary">Use SW audio decoder instead of HW audio decoder.</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio_local">SW audio (local)</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio_local_summary">Use SW audio decoder for playing for local files stored on the device.</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio_network">SW audio (network)</string>
    <string formatted = "false" name="pref_sw_decoder_sw_audio_network_summary">Use SW audio decoder for playing remote network suouces.</string>
    <string formatted = "false" name="pref_sw_decoder_cpu_core">CPU core limit</string>
    <string formatted = "false" name="pref_sw_decoder_cpu_core_summary">Specify the maximum number of CPU cores to be used for SW decoding.</string>
    <string formatted = "false" name="pref_sw_decoder_color_format">Color format</string>
    <string formatted = "false" name="pref_sw_decoder_color_format_summary">YUV is experimental and does not work on all devices.</string>
    <string formatted = "false" name="pref_sw_decoder_use_speedup">Use speedup tricks</string>
    <string formatted = "false" name="pref_general_deinterlace">Deinterlace</string>
    <string formatted = "false" name="pref_general_deinterlace_summary">Deinterlace by default. Currently deinterlacing works only with SW decoder.</string>
    <string formatted = "false" name="pref_general_custom_codec">Custom codec</string>
    <string formatted = "false" name="pref_general_custom_codec_summary">Use ARMv7 NEON type custom codec.</string>
    <string formatted = "false" name="pref_general_language">Language</string>
    <string formatted = "false" name="pref_general_language_summary">System default</string>
    <string formatted = "false" name="pref_general_hw_acceleration">HW acceleration</string>
    <string formatted = "false" name="pref_general_hw_acceleration_summary">Hardware acceleration will be used to draw subtitles and on-screen controls.</string>
    <string formatted = "false" name="pref_general_play_media">Play media links</string>
    <string formatted = "false" name="pref_general_play_media_summary">Play HTTP/HTTPS media links. This option can interfere with file downloading.</string>
    <string formatted = "false" name="pref_general_http_user_agent">Http User-Agent</string>
    <string formatted = "false" name="pref_general_http_user_agent_summary">Override \&#x27;User-Agent\&#x27; on connecting to web server. Leave blank to use default value.</string>
    <string formatted = "false" name="pref_general_quit_button">Quit button</string>
    <string formatted = "false" name="pref_general_quit_button_summary">Display Quit button on the menu. This will terminate the application completely unlink \&#x22;back\&#x22; or \&#x22;home\&#x22; button.</string>
    <string formatted = "false" name="pref_general_edit_allow_editing">Allow editing</string>
    <string formatted = "false" name="pref_general_edit_allow_editing_summary">Enable edit menu to delete or rename files/folders.</string>
    <string formatted = "false" name="pref_general_edit_delete_subtitle">Delete subtitle files together</string>
    <string formatted = "false" name="pref_general_user_data_clear_history">Clear history</string>
    <string formatted = "false" name="pref_general_user_data_clear_history_summary">Clear all user activity records including playback and search history.</string>
    <string formatted = "false" name="pref_general_user_data_clear_thumbnail">Clear thumbnail cache</string>
    <string formatted = "false" name="pref_general_user_data_clear_thumbnail_summary">Clear thumbnail cached on the sdcard. Thumbnails will be generated again when media list is opened.</string>
    <string formatted = "false" name="pref_general_user_data_cache_thumbnail">Cache thumbnail</string>
    <string formatted = "false" name="pref_general_user_data_clear_font">Clear font cache</string>
    <string formatted = "false" name="pref_general_user_data_clear_font_summary">Clear font cache for SubStation Alpha subtitle in case of corruption.</string>
    <string formatted = "false" name="pref_general_user_data_rest_settings">Rest settings</string>
    <string formatted = "false" name="pref_general_user_data_rest_settings_summary">Rest all settings to their default condition.</string>
    <string formatted = "false" name="pref_general_user_data_export">Export</string>
    <string formatted = "false" name="pref_general_user_data_export_summary">Export settings and activity records to a file.</string>
    <string formatted = "false" name="pref_general_user_data_import">Import</string>
    <string formatted = "false" name="pref_general_user_data_import_summary">Import settings and activity records from a file.</string>
    <string name="pref_key_decoder_use_hwplus_decoder">pref_key_decoder_use_hwplus_decoder</string>
    <string name="pref_key_decoder_hwplus_decoder_local">pref_key_decoder_hwplus_decoder_local</string>
    <string name="pref_key_decoder_hwplus_decoder_network">pref_key_decoder_hwplus_decoder_network</string>
    <string name="pref_key_decoder_try_hw_decoder">pref_key_decoder_try_hw_decoder</string>
    <string name="pref_key_decoder_hwplus_video_codecs">pref_key_decoder_hwplus_video_codecs</string>
    <string name="pref_key_decoder_hwplus_audio_on_sw_video">pref_key_decoder_hwplus_audio_on_sw_video</string>
    <string name="pref_key_decoder_try_hwplus_decoder">pref_key_decoder_try_hwplus_decoder</string>
    <string name="pref_key_decoder_correct_aspect_ratio">pref_key_decoder_correct_aspect_ratio</string>
    <string name="pref_key_decoder_calibrate_playback_position">pref_key_decoder_calibrate_playback_position</string>
    <string name="pref_key_decoder_hw_audio_track_selectable">pref_key_decoder_hw_audio_track_selectable</string>
    <string name="pref_key_decoder_sw_decoder_local">pref_key_decoder_sw_decoder_local</string>
    <string name="pref_key_decoder_sw_decoder_network">pref_key_decoder_sw_decoder_network</string>
    <string name="pref_key_decoder_sw_audio">pref_key_decoder_sw_audio</string>
    <string name="pref_key_decoder_sw_audio_local">pref_key_decoder_sw_audio_local</string>
    <string name="pref_key_decoder_sw_audio_network">pref_key_decoder_sw_audio_network</string>
    <string name="pref_key_decoder_cpu_core_limit">pref_key_decoder_cpu_core_limit</string>
    <string name="pref_key_decoder_color_format">pref_key_decoder_color_format</string>
    <string name="pref_key_decoder_use_speedup_tricks">pref_key_decoder_use_speedup_tricks</string>
    <string name="pref_key_decoder_deinterlace">pref_key_decoder_deinterlace</string>
    <string name="pref_key_decoder_custom_codec">pref_key_decoder_custom_codec</string>
    <string name="pref_key_general_language">pref_key_general_language</string>
    <string name="pref_key_general_hw_accleration">pref_key_general_hw_accleration</string>
    <string name="pref_key_general_play_media_links">pref_key_general_play_media_links</string>
    <string name="pref_key_general_http_user_agent">pref_key_general_http_user_agent</string>
    <string name="pref_key_general_quit_button">pref_key_general_quit_button</string>
    <string name="pref_key_general_allow_editing">pref_key_general_allow_editing</string>
    <string name="pref_key_general_delete_subtitle_files_together">pref_key_general_delete_subtitle_files_together</string>
    <string name="pref_key_general_clear_history">pref_key_general_clear_history</string>
    <string name="pref_key_general_clear_thumbnail_cache">pref_key_general_clear_thumbnail_cache</string>
    <string name="pref_key_general_cache_thumbnail">pref_key_general_cache_thumbnail</string>
    <string name="pref_key_general_clear_font_cache">pref_key_general_clear_font_cache</string>
    <string name="pref_key_general_reset_settings">pref_key_general_reset_settings</string>
    <string name="pref_key_general_export">pref_key_general_export</string>
    <string name="pref_key_general_import">pref_key_general_import</string>
</resources>