<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_search"
        app:actionLayout="@layout/action_search_layout"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_network_stream"
        android:title="@string/menu_network_stream"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_view"
        android:title="@string/menu_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_select"
        android:title="@string/menu_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
</menu>